# parados_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  entitlements-appstore.plist  entitlements.plist
.github/scripts/: appstore_metadata.py
.github/workflows/: release.yml
assets/: Info.plist.template  install-linux.sh  parados.desktop
assets/games/: capovolto.html  democracy.html  democracy_en.html  democracy_remote.html  divided_loyalties.html  divided_loyalties_cn.html  divided_loyalties_en.html  divided_loyalties_jp.html  divided_loyalties_starting_positions.csv  divided_loyalties_ua.html  frankenstein.html  index.html  kangaroo.html  kangaroo_cn.html  kangaroo_en.html  kangaroo_jp.html  kangaroo_ua.html  makalaina.html  makalaina_remote.html  makalaina_starting_positions.csv  rainbow_blackjack.html  rainbow_blackjack_en.html  rainbow_blackjack_remote.html  startpositionen.html
examples/: make_ico.rs  round_icon.rs
screenshots/macos/: capture.sh
screenshots/windows/: capture.ps1  orchestrate.ps1
src/: games.rs  index_html.rs  main.rs
windows/: AppxManifest.xml
